Исправлен баг с парамтерами сортировки по умолчанию